# agent-conch

./: .gitignore  AGENTS.md  LICENSE  README.md  conch.yaml  pyproject.toml
.workbuddy/memory/: 2026-06-25.md  2026-06-26-impl.md  2026-06-26.md  2026-06-27.md  2026-06-28.md  MEMORY.md
apps/desktop/: README.md  main.cjs  package-lock.json  package.json  preload.cjs
apps/web/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
apps/web/e2e/: workbench.spec.ts
apps/web/src/: App.tsx  ResourceConsole.test.tsx  api.ts  styles.css  types.ts
backend/: .env.example  pyproject.toml
backend/conch/adapters/governance/: __init__.py  allowlist.py
backend/conch/adapters/guardrail/: llamaguard.py  nemo_guardrails.py  stacked_guardrails.py
backend/conch/adapters/information/: agents_md.py
backend/conch/adapters/llm/: litellm_provider.py
backend/conch/adapters/memory/: mem0_provider.py
backend/conch/adapters/observability/: console_tracer.py  langfuse_tracer.py  stacked_tracer.py
backend/conch/adapters/orchestration/: langgraph_react.py  single_loop.py
backend/conch/adapters/tool/: mcp_provider.py
backend/conch/api/: __init__.py  deps.py  hitl.py  sse.py
backend/conch/api/routes/: chat.py  plugin.py  profile.py  session.py  websocket.py
backend/conch/core/: __init__.py  cost_guard.py  experiment.py  extension.py  guardrail_pipeline.py  hook_bridge.py  hooks.py  middleware.py  profile.py  registry.py
backend/conch/runtime/sandbox/: docker_sandbox.py
backend/guardrail_configs/chat/: config.yml  rails.co
backend/profiles/: user-chat-v1.yaml
backend/tests/: test_core.py
benchmarks/: mvp-tasks.md
benchmarks/swe-mini/: 001.json  002.json
conch/: __main__.py
conch/core/: __init__.py  extension.py  loop.py  profile.py
conch/domains/: __init__.py
conch/domains/constraint/: __init__.py  linter.py
conch/domains/context/: __init__.py  jit_compaction.py
conch/domains/eval/: __init__.py  step_eval.py
conch/domains/governance/: __init__.py  allowlist.py
conch/domains/information/: __init__.py  agents_md.py
conch/domains/memory/: __init__.py  notes_file.py
conch/domains/observability/: __init__.py
conch/domains/orchestration/: __init__.py  single_loop.py
conch/domains/tool/: __init__.py  builtin_shell.py
conch/runtime/model/: base.py  scripted.py
conch/runtime/store/: memory_store.py
docs/: Agent-Conch_P1_阶段实现进度总结.md  Agent-Conch_P2_阶段实现进度总结.md  Agent-Conch_P3_阶段实现进度总结.md  Agent-Conch_P4_阶段实现进度总结.md  Agent-Conch_架构&策略梳理.md  Agent-Conch_阶段性实现总结.md  Agent-Conch_项目全景认知文档.md  C_上下文与记忆层实现策略沉淀_P2.md  C_上下文与记忆层实现策略沉淀_P3.md  C_上下文与记忆层实现策略沉淀_P4.md  E_执行环境与沙箱层实现策略沉淀.md  E_执行环境与沙箱层实现策略沉淀_P3.md  E_执行环境与沙箱层实现策略沉淀_P4.md  G_治理与安全层实现策略沉淀_P3.md  G_治理与安全层实现策略沉淀_P4.md  LSGE_层实现策略沉淀_P2.md  L_生命周期与编排层实现策略沉淀.md  L_生命周期与编排层实现策略沉淀_P3.md  L_生命周期与编排层实现策略沉淀_P4.md  O_可观测层实现策略沉淀_P3.md  O_可观测层实现策略沉淀_P4.md  QA.md  S_状态存储层实现策略沉淀.md  S_状态存储层实现策略沉淀_P3.md  S_状态存储层实现策略沉淀_P4.md  T_工具接口层实现策略沉淀.md  T_工具接口层实现策略沉淀_P3.md  T_工具接口层实现策略沉淀_P4.md  V_验证与评估层实现策略沉淀_P3.md  V_验证与评估层实现策略沉淀_P4.md  demo-validation-v2.md  implementation-status-v2.md  implementation-status.md  technical-design-v2.md  technical-design.md
docs/technical-points/: 01-extension-point.md  02-registry.md  03-hook-and-middleware.md  04-profile-and-experiment.md  05-agent-loop.md  06-context-management.md  07-tool-system-mcp.md  08-memory-five-types.md  09-multi-agent-orchestration.md  10-observability.md  11-sandbox-security.md  12-cost-guard.md  13-skill-system.md  README.md
docs/technical-points-v2/: 01-extension-registry.md  02-hook-middleware-bridge.md  03-profile-experiment.md  04-orchestration.md  05-tool-system.md  06-guardrail.md  07-context-memory.md  08-cost-observability.md  09-llm-provider.md  10-api-runtime.md  README.md
frontend/: package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/chat/: Conversation.tsx  GuardrailBanner.tsx  HitlApprovalPanel.tsx  (+4 more)
frontend/lib/: api.ts  sse-client.ts  store.ts  ws-client.ts
plan/: agent-conch-design.md  agent-conch-references.md  prompt.md  summary_prompt.md
profiles/: coding-agent-v1.yaml  coding-agent-v2-subagents.yaml
src/agent_conch/: __init__.py  cli.py  config.py
src/agent_conch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  demo_e2e.py  test_context.py  test_core.py  test_design_closure.py  test_engine.py  test_integration.py  test_p2.py  test_p3.py  test_p4.py  test_sandbox.py  test_state.py  test_tool_system.py  test_tools.py
(+83 files in other folders)
