[project]
name = "agent-conch"
version = "0.1.0"
description = "Agent Harness Engineering 技术实践平台 — 以可扩展性为核心的 Agent 实验底座"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "chanchan" }]
keywords = ["agent", "harness", "llm", "ai", "framework"]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
docker = ["docker>=7.0"]
vector = ["chromadb>=0.5"]
browser = ["playwright>=1.40"]
llm = ["litellm>=1.30"]

[project.urls]
Documentation = "https://github.com/chanchan/AgentConch/blob/main/docs/technical-design.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["conch"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
