[project]
name = "agent-conch"
version = "2.0.0"
description = "Agent Harness Engineering 平台 — 成熟框架底座 + 可扩展层"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Web 框架
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    # 编排框架
    "langgraph>=0.2",
    "langchain-openai>=0.1",
    "langchain-core>=0.2",
    # LLM 接入
    "litellm>=1.30",
    # 工具协议
    "mcp>=1.0",
    # 配置校验
    "pydantic>=2",
    "pyyaml>=6",
    # 环境变量加载
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "httpx>=0.27",
]
guardrail = [
    # NeMo Guardrails 需要 annoy（C++ 编译），Windows 需 Visual C++ Build Tools
    "nemoguardrails>=0.10",
]
langfuse = [
    "langfuse>=2.0",
]
# 阶段二依赖（MVP 不装）
phase2 = [
    "mem0ai",
    "deepeval",
    "chromadb",
    "redis",
    "psycopg[binary]",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["conch*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
